--- a/public/principal.html
+++ b/public/principal.html
@@ -63,5 +63,6 @@
     
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/placar.js"></script>
 </body>
 </html>
